--- a/404.html
+++ b/404.html
@@ -42,9 +42,14 @@
   </style>
 </head>
 <body>
-  <img src="./9rk7xw.jpg" alt="404 Image" />
+  <iframe src="https://www.youtube.com/embed/Yp8o35zahgo" 
+          title="YouTube video player" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen></iframe>
   <h1>404</h1>
   <p>We couldn't find the page you were looking for.</p>
   <a href="/">Return Home</a>
+  <a href="https://bsky.app/profile/smg4radiosdroff.bsky.social">Bluesky</a>
+  <a href="https://discord.gg/PeafwRcHKE">Discord</a>
 </body>
 </html>
