--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 
       <a href="https://smg4radiobetawebv2.pages.dev/">SMG4 Radio Project</a>
 
+      <a href="https://info.flagcounter.com/FYEz"><img src="https://s01.flagcounter.com/count2/FYEz/bg_FFFFFF/txt_000000/border_CCCCCC/columns_7/maxflags_34/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+
       <script>
 function changedateByDate(date) {
   if (date === '20240331') {
