--- a/404.html
+++ b/404.html
@@ -42,14 +42,12 @@
   </style>
 </head>
 <body>
-  <iframe src="https://www.youtube.com/embed/Yp8o35zahgo" 
-          title="YouTube video player" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-          allowfullscreen></iframe>
+  <img src="error500.png" alt="404 Image" />
   <h1>404</h1>
   <p>We couldn't find the page you were looking for.</p>
   <a href="/">Return Home</a>
   <a href="https://bsky.app/profile/smg4radiosdroff.bsky.social">Bluesky</a>
   <a href="https://discord.gg/PeafwRcHKE">Discord</a>
+  <a href="https://smg4-radio-sdr.fandom.com/">Wiki</a>
 </body>
 </html>
