--- a/500.html
+++ b/500.html
@@ -50,8 +50,9 @@
   <p class="quote">"Если ваш сын подрос, купите ему компьютер, чо он как дурак блять!."</p>
   <img src="error500.png" alt="lol" />
   <br />
-  <a href="/">Go Back Home</a>
+  <a href="/">Try again</a>
   <a href="https://bsky.app/profile/smg4radiosdroff.bsky.social">Bluesky</a>
   <a href="https://discord.gg/PeafwRcHKE">Discord</a>
+  <a href="https://smg4-radio-sdr.fandom.com/">Wiki</a>
 </body>
 </html>
