--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         </select>
       </div>
 
+      <a href="https://bsky.app/profile/smg4radiosdroff.bsky.social">Bluesky</a>
+      <a href="https://smg4-radio-sdr.fandom.com/">Wiki</a>
+      
       <a href="https://smg4radiobetawebv2.pages.dev/">SMG4 Radio Project</a>
 
       <a href="https://info.flagcounter.com/FYEz"><img src="https://s01.flagcounter.com/count2/FYEz/bg_FFFFFF/txt_000000/border_CCCCCC/columns_7/maxflags_34/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
