--- a/503.html
+++ b/503.html
@@ -32,7 +32,8 @@
   <a href="https://discord.gg/PeafwRcHKE">Discord</a>
   <div id="datetime"></div>
   <a href="https://bsky.app/profile/smg4radiosdroff.bsky.social">Bluesky</a>
-  <button onclick="location.reload()">Try Again</button>
+  <a href="https://smg4-radio-sdr.fandom.com/">Wiki</a>
+  <a href="/">Try again</a>
 
   <script>
     function updateDateTime() {
